--- a/_layouts/cards.html
+++ b/_layouts/cards.html
@@ -31,6 +31,7 @@
   <!--[if lt IE 9]>
   <script src="lib/js/html5shiv.js"></script>
   <![endif]-->
+  <script src="lib/js/head.min.js"></script>
 </head>
 
 <body>
@@ -39,7 +40,5 @@
       {{content}}
     </div>
   </div>
-  <script src="lib/js/head.min.js"></script>
-  <script src="js/reveal.js"></script>
-  <script src="js/cards.js"></script>
+  <script src="app.js"></script>
 </body>
