--- a/_layouts/cards.html
+++ b/_layouts/cards.html
@@ -16,8 +16,7 @@
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/theme.css" id="theme">
 
-  <!-- Code syntax highlighting -->
-  <link rel="stylesheet" href="lib/css/zenburn.css">
+  <link rel="stylesheet" href="css/materialize_0.95.3/materialize.min.css">
 
   <!-- Printing and PDF exports -->
   <script>
@@ -32,6 +31,7 @@
   <script src="lib/js/html5shiv.js"></script>
   <![endif]-->
   <script src="lib/js/head.min.js"></script>
+
 </head>
 
 <body>
@@ -39,6 +39,16 @@
     <div class="slides">
       {{content}}
     </div>
+  </div>
+  <div class="validate-card fixed-action-btn" style="bottom: 15px; right: 25px;">
+    <a class="btn-floating btn-large teal">
+      <i class="large mdi-action-done"></i>
+    </a>
+  </div>
+  <div class="show-hints fixed-action-btn" style="bottom: 15px; right:100px;">
+    <a class="btn-floating btn-large yellow darken-4">
+      <i class="large mdi-navigation-expand-more"></i>
+    </a>
   </div>
   <script src="app.js"></script>
 </body>
