--- a/cordova/platforms/android/res/xml/config.xml
+++ b/cordova/platforms/android/res/xml/config.xml
@@ -1,13 +1,9 @@
 <?xml version='1.0' encoding='utf-8'?>
-<widget id="io.cordova.hellocordova" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
+<widget id="me.bobylito.greekflashcards" version="0.0.1" xmlns="http://www.w3.org/ns/widgets" xmlns:cdv="http://cordova.apache.org/ns/1.0">
     <preference name="loglevel" value="DEBUG" />
-    <name>HelloCordova</name>
-    <description>
-        A sample Apache Cordova application that responds to the deviceready event.
-    </description>
-    <author email="dev@cordova.apache.org" href="http://cordova.io">
-        Apache Cordova Team
-    </author>
+    <name>Greek FlashCards</name>
+    <description>Greek flashcards in french</description>
+    <author email="bobylito@gmail.com" href="http://bobylito.me">Alexandre Stanislawski</author>
     <content src="index.html" />
     <access origin="*" />
 </widget>
